k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskapi
  namespace: default
  labels:
    app: taskapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskapi
  template:
    metadata:
      labels:
        app: taskapi
    spec:
      containers:
        - name: taskapi
          image: taskapi:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
