k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapi-service
  namespace: default
  labels:
    app: taskapi
spec:
  type: ClusterIP
  selector:
    app: taskapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
