k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: taskapi-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: taskapi
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: taskapi
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
    - to: []
      ports:
        - protocol: UDP
          port: 53
